--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -17,7 +19,7 @@ body {
   display: flex;
   justify-content: center;
   place-items: center;
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100w;
+  height: 100vh;
+  margin: 0px;
 }
